mod: update docs and add scalar
