# docs/swagger.json
@@ -21,9 +21,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "Auth"
                 ],
-                "summary": "Get the authenticated user",
+                "summary": "Get Current User Data",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -68,9 +68,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "Auth"
                 ],
-                "summary": "Sign in a user",
+                "summary": "Sign In",
                 "parameters": [
                     {
                         "description": "Sign in payload",
@@ -126,9 +126,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "Auth"
                 ],
-                "summary": "Create a user account",
+                "summary": "Sign Up",
                 "parameters": [
                     {
                         "description": "Sign up payload",
@@ -186,9 +186,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "bookings"
+                    "Bookings"
                 ],
-                "summary": "List the user's bookings",
+                "summary": "Get Current User Bookings",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -233,9 +233,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "bookings"
+                    "Bookings"
                 ],
-                "summary": "Create a booking",
+                "summary": "Create New Booking",
                 "parameters": [
                     {
                         "description": "Booking payload",
@@ -305,9 +305,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "bookings"
+                    "Bookings"
                 ],
-                "summary": "Delete a booking",
+                "summary": "Delete a Booking",
                 "parameters": [
                     {
                         "type": "integer",
@@ -352,9 +352,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "events"
+                    "Events"
                 ],
-                "summary": "List events",
+                "summary": "Get All Events",
                 "parameters": [
                     {
                         "type": "string",
@@ -422,9 +422,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "events"
+                    "Events"
                 ],
-                "summary": "Create an event",
+                "summary": "Create New Event",
                 "parameters": [
                     {
                         "type": "string",
@@ -514,9 +514,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "events"
+                    "Events"
                 ],
-                "summary": "List the user's events",
+                "summary": "Get Current User Events",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -555,9 +555,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "events"
+                    "Events"
                 ],
-                "summary": "Get an event",
+                "summary": "Get an Event by ID",
                 "parameters": [
                     {
                         "type": "integer",
@@ -608,9 +608,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "events"
+                    "Events"
                 ],
-                "summary": "Update an event",
+                "summary": "Update an Event",
                 "parameters": [
                     {
                         "type": "integer",
@@ -712,9 +712,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "events"
+                    "Events"
                 ],
-                "summary": "Delete an event",
+                "summary": "Delete an Event",
                 "parameters": [
                     {
                         "type": "integer",
